Adicionada tab Balanço

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -10,6 +10,11 @@
     <ion-nav-view name="tab-despesas"></ion-nav-view>
   </ion-tab>
 
+  <!--Tab Balanço -->
+  <ion-tab title="Balanço" icon-off="ion-social-usd-outline" icon-on="ion-social-usd-outline" href="#/tab/balanco">
+    <ion-nav-view name="tab-balanco"></ion-nav-view>
+  </ion-tab>
+
   <!-- Tab conta -->
   <ion-tab title="Conta" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/conta">
     <ion-nav-view name="tab-conta"></ion-nav-view>
