--- a/www/templates/tab-conta.html
+++ b/www/templates/tab-conta.html
@@ -1,5 +1,17 @@
 <ion-view view-title="Conta">
   <ion-content class="padding">
-    <h2>Welcome to Ionic</h2>
+    <div class="list" ng-show="showLoginForm">
+      <label class="item item-input">
+        <span class="input-label">Email</span><input type="text" ng-model="email"/>
+      </label>
+      <label class="item item-input">
+        <span class="input-label">Senha</span><input type="password" ng-model="senha"/>
+      </label>
+      <button class="button button-block button-positive" ng-click="login(email, senha)">Login</button>
+    </div>
+    <div class="card" ng-hide="showLoginForm">
+      <div class="item item-text-wrap">Você está logado como {{user.email}}</div>
+    </div>
+    <button class="button button-stable" ng-click="logout()" ng-hide="showLoginForm">Logout</button>
   </ion-content>
 </ion-view>
